Fix for issue #175-age key is jumping off page when looked at on small computer screen. Set max-height to 50 vh.

--- a/app/src/frontend/legend.css
+++ b/app/src/frontend/legend.css
@@ -33,7 +33,7 @@
     margin: 0.25rem 0 0.5rem;
 }
 .data-legend {
-    max-height: 30rem;
+    max-height: 50vh;
     overflow-y: auto;
     list-style: none;
     margin-bottom: 0;
